@@ -1,3 +1,8 @@
+2010-01-15  Satoshi Yatagawa  <yata_github@y.hauN.org>
+
+	* twittering-mode.el (twittering-edit-buffer): New defvar.
+	(twittering-update-status-from-pop-up-buffer): Use it.
+
 2010-01-15  Yuto Hayamizu  <y.hayamizu@gmail.com>
 
 	* twittering-mode.el (twittering-mode-identity): add. Identify
